<resources>
    <string name="app_name">300cem</string>
    <string name="language">En</string>
    <string name="invalid_username">Not a valid username or email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="cancel">cancel</string>
    <string name="login_fail_massage">No such account, wrong account and password</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successful">Login successful</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="email">Email or Username</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello</string>
    <string name="success">success</string>
    <string name="error">error</string>
    <string name="fingerprintsave">would you like to use fingerprint to login</string>
    <string name="ok">ok</string>
    <string name="TakeAttendance">Take Attendance</string>
</resources>
